# nRF9151_TEST

./: README.md
PD1_UK_NCS2.7.0_TEST/: CMakeLists.txt  Kconfig  nrf9151dk_nrf9151_ns.overlay  prj.conf
PD1_UK_NCS2.7.0_TEST/src/: main.c
PD1_UK_NCS2.7.0_TEST/src/audio/: audio.c
PD1_UK_NCS2.7.0_TEST/src/communicate/: communicate.c
PD1_UK_NCS2.7.0_TEST/src/datetime/: datetime.c  datetime.h
PD1_UK_NCS2.7.0_TEST/src/external_flash/: external_flash.c  external_flash.h
PD1_UK_NCS2.7.0_TEST/src/factory_test/: ft_aging.c  ft_gpio.c  ft_main.c  ft_network.c  ft_sim.c  ft_touch.c
PD1_UK_NCS2.7.0_TEST/src/font/: font.h
PD1_UK_NCS2.7.0_TEST/src/fota/: fota_mqtt.c
PD1_UK_NCS2.7.0_TEST/src/gps/: gps.c  gps.h
PD1_UK_NCS2.7.0_TEST/src/imu/: algorithm.h  fall.c  lsm6dso.c
PD1_UK_NCS2.7.0_TEST/src/inner_flash/: inner_flash.c  inner_flash.h
PD1_UK_NCS2.7.0_TEST/src/key/: key.c
PD1_UK_NCS2.7.0_TEST/src/lcd/: LCD_VG6432TSWPG28_SSD1315.c  lcd.c
PD1_UK_NCS2.7.0_TEST/src/nb/: nb.c
PD1_UK_NCS2.7.0_TEST/src/pmu/: cw2215.c  cw6307.c  cw_interface.c  cw_interface.h  max20353.c  max20353.h  max20353_reg.c  pmu.h
PD1_UK_NCS2.7.0_TEST/src/pressure/: dps368.c  lps22df.c
PD1_UK_NCS2.7.0_TEST/src/settings/: settings.h
PD1_UK_NCS2.7.0_TEST/src/uart/: uart.c
PD1_UK_NCS2.7.0_TEST/src/wifi/: esp8266.c
serial_lte_modem/src/: main.c  slm_at_fota.c
